# realtime-calib

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CLA.md  CLAUDE.md  LICENSE-HEADER.txt  README.md  RUNBOOK.md  docker-compose.yml  livekit.yaml
calibration-service/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
calibration-service/src/calibration_service/: __init__.py  app.py  config.py  logging_setup.py  settings.py  telemetry.py  tuning.py
calibration-service/src/calibration_service/board/: __init__.py  dictionaries.py  render.py  validate.py
calibration-service/src/calibration_service/calibration/: __init__.py  extrinsic.py  intrinsic.py
calibration-service/src/calibration_service/capture/: __init__.py  camera.py  enumeration.py  pacing.py  probe.py  source.py
calibration-service/src/calibration_service/detection/: __init__.py  detector.py
calibration-service/src/calibration_service/export/: __init__.py  camera_array.py
calibration-service/src/calibration_service/models/: __init__.py  board.py  camera.py  frame.py  session.py
calibration-service/src/calibration_service/overlays/: __init__.py  burn_in.py
calibration-service/src/calibration_service/recording/: __init__.py  extrinsic_recorder.py  ffmpeg.py  preview.py  replay.py  video_writer.py
calibration-service/src/calibration_service/session/: __init__.py  config_store.py  import_session.py  manager.py  store.py
calibration-service/src/calibration_service/synchronization/: __init__.py  caliscope_alignment.py  (+3 more)
calibration-service/tests/: conftest.py  test_api.py  test_board.py  test_calibration.py  test_caliscope_alignment.py  test_capture.py  test_defaults.py  test_detection.py  test_enumeration_modes.py  test_export.py  test_extrinsic_recording.py  test_extrinsic_solver.py  test_frame_conversion.py  test_health.py  test_overlays.py  test_pacing.py  test_preview.py  test_publish_draw.py  test_publish_reconcile.py  test_recording.py  test_session_import.py  test_session_store.py  test_settings.py  test_synchronization.py  test_telemetry.py
livekit-token-server/: Dockerfile  gunicorn.conf.py  pyproject.toml
livekit-token-server/src/livekit_token_server/: __init__.py  app.py  config.py
livekit-token-server/tests/: test_token.py
(+143 files in other folders)
