[project]
name = "calibration-service"
version = "0.0.0"
description = "Real-time multi-camera calibration service (capture, detection, computation, HTTP API, session state)."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138",
    "uvicorn>=0.49",
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    # opencv-python is intentionally capped below 5.0 to stay on the 4.x API the
    # specs are anchored on; moving to 5.0 will be a deliberate, ADR-tracked migration.
    "opencv-python>=4.13,<5",
    "numpy>=2",
    # LiveKit real-time SDK (video track publishing) + token minting.
    "livekit>=1.0",
    "livekit-api>=1.1",
    # TOML read/write for the session folder (Caliscope-compatible, ADR-0002/0016).
    "rtoml>=0.12",
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
    "pyjwt>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calibration_service"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
